fixed display of phone numbers in safari on ios devices

--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -227,6 +227,10 @@ input, textarea {
 	&:-ms-input-placeholder {color: #dfdfdf;}
 }
 
+a {
+	color: #fff;
+}
+
 
 
 
